Add front matter

--- a/_patterns/00-atoms/03-lists/02-definition.html
+++ b/_patterns/00-atoms/03-lists/02-definition.html
@@ -1,7 +1,6 @@
 ---
-title: Definition
+title: Definition List
 ---
-
 <dl>
 	<dt>Definition List</dt>
 	<dd>A number of connected items or names written or printed consecutively, typically one below the other.</dd>
