--- a/_patterns/00-atoms/04-images/01-landscape-4x3.html
+++ b/_patterns/00-atoms/04-images/01-landscape-4x3.html
@@ -1,5 +1,4 @@
 ---
-title: Landscape 4x3
+title: Landscape Images
 ---
-
 <img src="{{ img.landscape-4x3.src }}" alt="{{ img.landscape-4x3.alt }}" />
