--- a/_patterns/00-atoms/05-forms/02-checkboxes.html
+++ b/_patterns/00-atoms/05-forms/02-checkboxes.html
@@ -1,7 +1,6 @@
 ---
-title: Checkbox
+title: Checkboxes
 ---
-
 <form action="#">
     <fieldset class="options">
         <legend>Checkbox <abbr title="Required">*</abbr></legend>
