--- a/_patterns/01-molecules/02-blocks/01-block-headline-byline.html
+++ b/_patterns/01-molecules/02-blocks/01-block-headline-byline.html
@@ -1,3 +1,6 @@
+---
+title: Block Headline 
+---
 <div class="block block-headline">
 	<a href="{{ url }}" class="b-inner">
 		<h2 class="b-title">{{ headline.short }}</h2>
