--- a/_patterns/01-molecules/02-blocks/02-block-hero.html
+++ b/_patterns/01-molecules/02-blocks/02-block-hero.html
@@ -1,7 +1,10 @@
+---
+title: Block Hero
+---
 <div class="block block-hero">
 	<a href="{{ url }}" class="b-inner">
 		<div class="b-thumb">
-			{{> atoms-landscape-16x9 }} 
+			{{> atoms-landscape-16x9 }}
 		</div>
 		<div class="b-text">
 			<h2 class="b-title">{{ headline.medium }}</h2>
