--- a/_patterns/01-molecules/02-blocks/04-block-headline.html
+++ b/_patterns/01-molecules/02-blocks/04-block-headline.html
@@ -1,3 +1,6 @@
+---
+title: Block headline
+---
 <div class="block block-headline">
 	<a href="{{ url }}">
 		<h2 class="headline">Headline: Lorem ipsum dolor sit amet, consectetur adipiscing elit</h2>
