--- a/_patterns/01-molecules/04-forms/01-comment-form.html
+++ b/_patterns/01-molecules/04-forms/01-comment-form.html
@@ -1,3 +1,6 @@
+---
+title: Comment Form
+---
 <form method="post" action="{{ url }}" class="comment-form">
 	<fieldset>
 		<div class="field-container">
