--- a/_patterns/01-molecules/05-navigation/01-footer-nav.html
+++ b/_patterns/01-molecules/05-navigation/01-footer-nav.html
@@ -1,3 +1,6 @@
+---
+title: Footer Nav
+---
 <ul class="nav-footer">
 	<li><a href="{{ url }}">Home</a></li>
 	<li><a href="{{ url }}">About</a></li>
