--- a/_patterns/01-molecules/05-navigation/02-breadcrumbs.html
+++ b/_patterns/01-molecules/05-navigation/02-breadcrumbs.html
@@ -1,3 +1,6 @@
+---
+title: Breadcrumbs
+---
 <ul class="breadcrumbs">
 	<li><a href="{{ url }}">Grandparent</a></li>
 	<li><a href="{{ url }}">Parent</a></li>
