--- a/_patterns/01-molecules/05-navigation/03-pagination.html
+++ b/_patterns/01-molecules/05-navigation/03-pagination.html
@@ -1,3 +1,6 @@
+---
+title: Pagination
+---
 <ol class="pagination">
 	<li class="current"><a href="{{ url }}">1</a></li>
 	<li><a href="{{ url }}">2</a></li>
