--- a/_patterns/02-organisms/03-sections/01-recent-tweets.html
+++ b/_patterns/02-organisms/03-sections/01-recent-tweets.html
@@ -1,3 +1,6 @@
+---
+title: Recent News
+---
 <section class="section related-posts">
 	<h3 class="section-title">Recent Tweets</h3>
 	<ul class="headline-list">
