--- a/_patterns/02-organisms/03-sections/02-related-posts.html
+++ b/_patterns/02-organisms/03-sections/02-related-posts.html
@@ -1,3 +1,6 @@
+---
+title: Related Posts
+---
 <section class="section related-posts">
 	<h3 class="section-title">Related Posts</h3>
 	<ul class="headline-list">
