--- a/_patterns/00-atoms/08-media/_00-video.html
+++ b/_patterns/00-atoms/08-media/_00-video.html
@@ -1,7 +1,6 @@
 ---
-title: Video
+title: HTML5 Video
 ---
-
 <video width="640" height="360" controls="">
 	<source src="http://clips.vorwaerts-gmbh.de/VfE_html5.mp4" type="video/mp4">
 	<source src="http://clips.vorwaerts-gmbh.de/VfE.webm" type="video/webm">
