--- a/_patterns/01-molecules/00-text/02-heading-group.html
+++ b/_patterns/01-molecules/00-text/02-heading-group.html
@@ -1,4 +1,7 @@
+---
+title: Hgroup
+---
 <div class="hgroup">
-   	<h2>This is the heading group's main heading</h2>
-   	<h3>This is the heading group's subheading</h3>
+	<h2>This is the heading group's main heading</h2>
+	<h3>This is the heading group's subheading</h3>
 </div>
