--- a/_patterns/01-molecules/01-layout/00-one-up.html
+++ b/_patterns/01-molecules/01-layout/00-one-up.html
@@ -1,7 +1,10 @@
+---
+title: One column grid
+---
 <div class="demo">
 	<!--Grid 1up-->
 	<div class="g g-1up">
 		<div class="gi">1/1</div>
 	</div>
-	<!--End Grid 1up-->		
+	<!--End Grid 1up-->
 </div><!--end .demo-->
