--- a/_patterns/01-molecules/02-blocks/03-block-thumb-headline.html
+++ b/_patterns/01-molecules/02-blocks/03-block-thumb-headline.html
@@ -1,3 +1,6 @@
+---
+title: Block thumbnail headline
+---
 <div class="block block-thumb">
 	<a href="{{ url }}" class="b-inner">
 		<div class="b-thumb">
