--- a/_patterns/01-molecules/02-blocks/05-block-inset.html
+++ b/_patterns/01-molecules/02-blocks/05-block-inset.html
@@ -1,7 +1,10 @@
+---
+title: Block Headline inset
+---
 <div class="block block-inset">
     <a href="{{ url }}" class="inner">
 		<div class="b-thumb">
-			{{> atoms-landscape-4x3 }} 
+			{{> atoms-landscape-4x3 }}
 		</div>
 		<div class="b-text">
 			<h2 class="headline">{{ headline.short }}</h2>
