--- a/_patterns/01-molecules/04-forms/00-search.html
+++ b/_patterns/01-molecules/04-forms/00-search.html
@@ -1,4 +1,7 @@
-<form action="{{ url }}" method="post" class="inline-form search-form">           
+---
+title: Search form
+---
+<form action="{{ url }}" method="post" class="inline-form search-form">
     <fieldset>
 	    <legend class="is-vishidden">Search</legend>
 	    <label for="search-field" class="is-vishidden">Search</label>
