Reorg so collections can be iterated through

--- a/_atoms/04-images/01-landscape-4x3.html
+++ b/_atoms/04-images/01-landscape-4x3.html
@@ -1,4 +1,4 @@
 ---
-title: Landscape Images
+title: Landscape 4x3
 ---
 <img src="{{ img.landscape-4x3.src }}" alt="{{ img.landscape-4x3.alt }}" />
