Correct image locations

--- a/_00-atoms/04-images/00-logo.html
+++ b/_00-atoms/04-images/00-logo.html
@@ -1,4 +1,4 @@
 ---
 title: Logo
 ---
-<a href="{{ url }}"><img src="../../images/logo.png" class="logo" alt="Logo Alt Text" /></a>
+<a href="{{ site.url }}"><img src="{{ "/images/logo.png" | prepend: site.baseurl }}" class="logo" alt="Logo Alt Text" /></a>
