--- a/_00-atoms/04-images/01-landscape-4x3.html
+++ b/_00-atoms/04-images/01-landscape-4x3.html
@@ -1,4 +1,4 @@
 ---
 title: Landscape 4x3
 ---
-<img src="{{ img.landscape-4x3.src }}" alt="{{ img.landscape-4x3.alt }}" />
+<img src="{{ "/images/fpo_4x3.png" | prepend: site.baseurl }}" alt="{{ img.landscape-4x3.alt }}" />
