--- a/_00-atoms/04-images/04-avatar.html
+++ b/_00-atoms/04-images/04-avatar.html
@@ -1,4 +1,4 @@
 ---
 title: Avatars
 ---
-<img src="{{img.avatar.src}}" alt="Avatar" />
+<img src="{{ "/images/fpo_avatar.png" | prepend: site.baseurl }}" alt="Avatar" />
