--- a/_00-atoms/04-images/06-loading-icon.html
+++ b/_00-atoms/04-images/06-loading-icon.html
@@ -1,4 +1,4 @@
 ---
 title: Loading Icon
 ---
-<img src="../../images/ajax-loader.gif" alt="Loading" />
+<img src="{{ "/images/ajax-loader.gif" | prepend: site.baseurl }}" alt="Loading" />
