--- a/_00-atoms/04-images/07-favicon.html
+++ b/_00-atoms/04-images/07-favicon.html
@@ -1,5 +1,5 @@
 ---
 title: Favicon
 ---
-<img src="../../images/favicon_16x16.jpg" />
-<img src="../../images/favicon_32x32.jpg" />
+<img src="{{ "/images/favicon_16x16.jpg" | prepend: site.baseurl }}" />
+<img src="{{ "/images/favicon_32x32.jpg" | prepend: site.baseurl }}" />
