--- a/_00-atoms/04-images/02-landscape-16x9.html
+++ b/_00-atoms/04-images/02-landscape-16x9.html
@@ -1,4 +1,4 @@
 ---
 title: Landscape 16x9
 ---
-<img src="{{ img.landscape-16x9.src }}" alt="{{ img.landscape-16x9.alt }}" />
+<img src="{{ "/images/fpo_16x9.png" | prepend: site.baseurl }}" alt="{{ img.landscape-16x9.alt }}" />
