Begin correcting includes

--- a/_00-molecules/02-blocks/01-block-headline-byline.html
+++ b/_00-molecules/02-blocks/01-block-headline-byline.html
@@ -1,8 +1,8 @@
 ---
-title: Block Headline 
+title: Block Headline
 ---
 <div class="block block-headline">
-	<a href="{{ url }}" class="b-inner">
+	<a href="{{ site.url }}" class="b-inner">
 		<h2 class="b-title">{{ headline.short }}</h2>
 		{{> atoms-time }}
 	</a>
