--- a/_00-molecules/02-blocks/03-block-thumb-headline.html
+++ b/_00-molecules/02-blocks/03-block-thumb-headline.html
@@ -2,9 +2,9 @@
 title: Block thumbnail headline
 ---
 <div class="block block-thumb">
-	<a href="{{ url }}" class="b-inner">
+	<a href="{{ site.url }}" class="b-inner">
 		<div class="b-thumb">
-			{{> atoms-square }}
+			{{ site.00-atoms | where:"title" : "Square Images" }}
 		</div>
 		<div class="b-text">
 			<h2 class="b-title">{{ title }}</h2>
