--- a/_00-molecules/02-blocks/04-block-headline.html
+++ b/_00-molecules/02-blocks/04-block-headline.html
@@ -2,7 +2,7 @@
 title: Block headline
 ---
 <div class="block block-headline">
-	<a href="{{ url }}">
+	<a href="{{ site.url }}">
 		<h2 class="headline">Headline: Lorem ipsum dolor sit amet, consectetur adipiscing elit</h2>
 	</a>
 </div>
