--- a/_00-molecules/03-media/00-figure-with-caption.html
+++ b/_00-molecules/03-media/00-figure-with-caption.html
@@ -2,6 +2,6 @@
 title: Figure with caption
 ---
 <figure>
-	{{> atoms-landscape-4x3 }}
+	{{ site.00-atoms | where:"title" : "Landscape 16x9" }}
 	<figcaption>This is an example of an image with a caption. Photo captions, also known as cutlines, are a few lines of text used to explain or elaborate on published photographs.</figcaption>
 </figure>
