--- a/_00-molecules/04-forms/01-comment-form.html
+++ b/_00-molecules/04-forms/01-comment-form.html
@@ -1,7 +1,7 @@
 ---
 title: Comment Form
 ---
-<form method="post" action="{{ url }}" class="comment-form">
+<form method="post" action="{{ site.url }}" class="comment-form">
 	<fieldset>
 		<div class="field-container">
 			<label for="comment-name">Name</label>
