--- a/_00-molecules/04-forms/02-newsletter.html
+++ b/_00-molecules/04-forms/02-newsletter.html
@@ -1,7 +1,7 @@
 ---
 title: Newsletter
 ---
-<form action="{{ url }}" method="post" class="inline-form newsletter-form">
+<form action="{{ site.url }}" method="post" class="inline-form newsletter-form">
   <fieldset>
     <legend>Sign up for our newsletter</legend>
     <label for="newsletter-scope">Sign up for our newsletter</label>
