--- a/_00-molecules/05-navigation/01-footer-nav.html
+++ b/_00-molecules/05-navigation/01-footer-nav.html
@@ -2,8 +2,8 @@
 title: Footer Nav
 ---
 <ul class="nav-footer">
-	<li><a href="{{ url }}">Home</a></li>
-	<li><a href="{{ url }}">About</a></li>
-	<li><a href="{{ url }}">Blog</a></li>
-	<li><a href="{{ url }}">Contact</a></li>
+	<li><a href="{{ site.url }}">Home</a></li>
+	<li><a href="{{ site.url }}">About</a></li>
+	<li><a href="{{ site.url }}">Blog</a></li>
+	<li><a href="{{ site.url }}">Contact</a></li>
 </ul>
