--- a/_00-molecules/05-navigation/02-breadcrumbs.html
+++ b/_00-molecules/05-navigation/02-breadcrumbs.html
@@ -2,9 +2,9 @@
 title: Breadcrumbs
 ---
 <ul class="breadcrumbs">
-	<li><a href="{{ url }}">Grandparent</a></li>
-	<li><a href="{{ url }}">Parent</a></li>
-	<li><a href="{{ url }}">Child</a></li>
-	<li><a href="{{ url }}">Grandchild</a></li>
-	<li><a href="{{ url }}">Great-Grandchild</a></li>
+	<li><a href="{{ site.url }}">Grandparent</a></li>
+	<li><a href="{{ site.url }}">Parent</a></li>
+	<li><a href="{{ site.url }}">Child</a></li>
+	<li><a href="{{ site.url }}">Grandchild</a></li>
+	<li><a href="{{ site.url }}">Great-Grandchild</a></li>
 </ul>
