--- a/_00-molecules/05-navigation/03-pagination.html
+++ b/_00-molecules/05-navigation/03-pagination.html
@@ -2,11 +2,11 @@
 title: Pagination
 ---
 <ol class="pagination">
-	<li class="current"><a href="{{ url }}">1</a></li>
-	<li><a href="{{ url }}">2</a></li>
-	<li><a href="{{ url }}">3</a></li>
-	<li><a href="{{ url }}">4</a></li>
-	<li><a href="{{ url }}">5</a></li>
-	<li><a href="{{ url }}">6</a></li>
-	<li><a href="{{ url }}">7</a></li>
+	<li class="current"><a href="{{ site.url }}">1</a></li>
+	<li><a href="{{ site.url }}">2</a></li>
+	<li><a href="{{ site.url }}">3</a></li>
+	<li><a href="{{ site.url }}">4</a></li>
+	<li><a href="{{ site.url }}">5</a></li>
+	<li><a href="{{ site.url }}">6</a></li>
+	<li><a href="{{ site.url }}">7</a></li>
 </ol>
