--- a/_00-molecules/06-components/00-social-share.html
+++ b/_00-molecules/06-components/00-social-share.html
@@ -3,9 +3,9 @@ title: Social Share
 ---
 <div class="social-share">
 	<ul class="social-share-list">
-		<li><a href="{{ url }}">Like</a></li>
-		<li><a href="{{ url }}">Tweet</a></li>
-		<li><a href="{{ url }}">Email</a></li>
-		<li><a href="{{ url }}">Comment</a></li>
+		<li><a href="{{ site.url }}">Like</a></li>
+		<li><a href="{{ site.url }}">Tweet</a></li>
+		<li><a href="{{ site.url }}">Email</a></li>
+		<li><a href="{{ site.url }}">Comment</a></li>
 	</ul>
 </div>
