--- a/_00-molecules/04-forms/00-search.html
+++ b/_00-molecules/04-forms/00-search.html
@@ -1,7 +1,7 @@
 ---
 title: Search form
 ---
-<form action="{{ url }}" method="post" class="inline-form search-form">
+<form action="{{ site.url }}" method="post" class="inline-form search-form">
     <fieldset>
 	    <legend class="is-vishidden">Search</legend>
 	    <label for="search-field" class="is-vishidden">Search</label>
