--- a/_00-molecules/05-navigation/00-primary-nav.html
+++ b/_00-molecules/05-navigation/00-primary-nav.html
@@ -3,9 +3,9 @@ title: Primary Nav
 ---
 <nav id="nav" class="nav">
 	<ul class="nav-list">
-		<li><a href="{{ url }}">Home</a></li>
-		<li><a href="{{ url }}">About</a></li>
-		<li><a href="{{ url }}">Blog</a></li>
-		<li><a href="{{ url }}">Contact</a></li>
+		<li><a href="{{ site.url }}">Home</a></li>
+		<li><a href="{{ site.url }}">About</a></li>
+		<li><a href="{{ site.url }}">Blog</a></li>
+		<li><a href="{{ site.url }}">Contact</a></li>
 	</ul>
 </nav><!--end .nav-->
