--- a/_00-molecules/05-navigation/04-tabs.html
+++ b/_00-molecules/05-navigation/04-tabs.html
@@ -3,8 +3,8 @@ title: Tabs
 ---
 <div class="tabs">
 	<ul class="tab-list">
-		<li><a href="{{ url }}" class="active">Tab 1</a></li>
-		<li><a href="{{ url }}">Tab 2</a></li>
-		<li><a href="{{ url }}">Tab 3</a></li>
+		<li><a href="{{ site.url }}" class="active">Tab 1</a></li>
+		<li><a href="{{ site.url }}">Tab 2</a></li>
+		<li><a href="{{ site.url }}">Tab 3</a></li>
 	</ul>
 </div>
