--- a/_00-organisms/00-global/00-header.html
+++ b/_00-organisms/00-global/00-header.html
@@ -3,7 +3,7 @@
 	{{ site.00-atoms | where:"title" : "Logo" }}
 	<a href="#search-form" class="nav-toggle nav-toggle-search icon-search"><span class="is-vishidden">Search</span></a>
 	<a href="#nav" class="nav-toggle nav-toggle-menu icon-menu"><span class="is-vishidden">Menu</span></a>
-	{{> molecules-primary-nav }}
-	{{> molecules-search }}
+	{{ site.00-atoms | where:"title" : "Primary Nav" }}
+	{{ site.00-molecules | where:"title" : "Search" }}
 </header>
 <!-- End .header -->
