--- a/_00-atoms/04-images/03-square.html
+++ b/_00-atoms/04-images/03-square.html
@@ -1,4 +1,4 @@
 ---
 title: Square Images
 ---
-<img src="{{ "/images/fpo_square.png" | prepend: site.baseurl }}" alt="{{ img.square.alt }}" />
+<img src="{{ "/images/fpo_square.png" | prepend: site.baseurl }}" alt="{{ site.data.content.img.square.alt }}" />
