--- a/_00-organisms/03-sections/01-recent-tweets.html
+++ b/_00-organisms/03-sections/01-recent-tweets.html
@@ -1,5 +1,5 @@
 ---
-title: Recent News
+title: Recent Tweets
 ---
 <section class="section related-posts">
 	<h3 class="section-title">Recent Tweets</h3>
