--- a/pages/01-blog.html
+++ b/pages/01-blog.html
@@ -1,5 +1,5 @@
 <div class="page" id="page">
-	{{> organisms-header }}
+	{{ site.00-organisms | where:"title" : "Header" }}
 	<div role="main">
 		<h1 class="section-title">Our Outdoor Blog</h1>
 		<div class="l-two-col">
@@ -13,13 +13,13 @@
 					</ul>
 					<a href="#" class="text-btn">View more posts</a>
 				</section>
-				{{> molecules-pagination }}
+				{{ site.00-molecules | where:"title" : "Pagination" }}
 			</div><!--end l-main-->
 
 			<div class="l-sidebar">
-				{{> organisms-recent-tweets }}
+				{{ site.00-organisms | where:"title" : "Recent Tweets" }}
 			</div><!--end l-sidebar-->
 		</div><!--end two-col-->
 	</div><!--End role=main-->
-	{{> organisms-footer }}
+	{{ site.00-organisms | where:"title" : "Footer" }}
 </div>
