--- a/_00-molecules/00-text/00-byline.html
+++ b/_00-molecules/00-text/00-byline.html
@@ -1,4 +1,4 @@
 ---
 title: Byline
 ---
-<div class="byline">by {{ author.first-name }} {{ author.last-name }}</div>
+<div class="byline">by {{ site.data.content.author.first-name }} {{ site.data.content.author.last-name }}</div>
