--- a/_00-molecules/02-blocks/00-media-blocks.html
+++ b/_00-molecules/02-blocks/00-media-blocks.html
@@ -7,8 +7,8 @@ title: Media Block
 			{{ site.00-atoms | where:"title" : "Square Images" }}
 		</div>
 		<div class="b-text">
-			<h2 class="b-title">{{ headline.short }}</h2>
-			<p>{{ excerpt.medium }}</p>
+			<h2 class="b-title">{{ site.data.content.headline.short }}</h2>
+			<p>{{ site.data.content.excerpt.medium }}</p>
 		</div>
 	</a>
 </div>
