--- a/_00-molecules/02-blocks/01-block-headline-byline.html
+++ b/_00-molecules/02-blocks/01-block-headline-byline.html
@@ -3,7 +3,7 @@ title: Block Headline
 ---
 <div class="block block-headline">
 	<a href="{{ site.url }}" class="b-inner">
-		<h2 class="b-title">{{ headline.short }}</h2>
+		<h2 class="b-title">{{ site.data.content.headline.short }}</h2>
 		{{> atoms-time }}
 	</a>
 </div>
