--- a/_00-molecules/02-blocks/02-block-hero.html
+++ b/_00-molecules/02-blocks/02-block-hero.html
@@ -7,7 +7,7 @@ title: Block Hero
 			{{ site.00-atoms | where:"title" : "Landscape 16x9" }}
 		</div>
 		<div class="b-text">
-			<h2 class="b-title">{{ headline.medium }}</h2>
+			<h2 class="b-title">{{ site.data.content.headline.medium }}</h2>
 		</div>
 	</a>
 </div>
