--- a/_00-molecules/02-blocks/03-block-thumb-headline.html
+++ b/_00-molecules/02-blocks/03-block-thumb-headline.html
@@ -7,7 +7,7 @@ title: Block thumbnail headline
 			{{ site.00-atoms | where:"title" : "Square Images" }}
 		</div>
 		<div class="b-text">
-			<h2 class="b-title">{{ title }}</h2>
+			<h2 class="b-title">{{ site.data.content.title }}</h2>
 		</div>
 	</a>
 </div>
