--- a/_00-molecules/02-blocks/05-block-inset.html
+++ b/_00-molecules/02-blocks/05-block-inset.html
@@ -7,7 +7,7 @@ title: Block Headline inset
 			{{ site.00-atoms | where:"title" : "Landscape 16x9" }}
 		</div>
 		<div class="b-text">
-			<h2 class="headline">{{ headline.short }}</h2>
+			<h2 class="headline">{{ site.data.content.headline.short }}</h2>
 		</div>
 	</a>
 </div>
