--- a/_00-organisms/03-sections/02-related-posts.html
+++ b/_00-organisms/03-sections/02-related-posts.html
@@ -4,10 +4,10 @@ title: Related Posts
 <section class="section related-posts">
 	<h3 class="section-title">Related Posts</h3>
 	<ul class="headline-list">
-		<li><h4><a href="#">{{ headline.short }}</a></h4></li>
-		<li><h4><a href="#">{{ headline.short }}</a></h4></li>
-		<li><h4><a href="#">{{ headline.short }}</a></h4></li>
-		<li><h4><a href="#">{{ headline.short }}</a></h4></li>
-		<li><h4><a href="#">{{ headline.short }}</a></h4></li>
+		<li><h4><a href="#">{{ site.data.content.headline.short }}</a></h4></li>
+		<li><h4><a href="#">{{ site.data.content.headline.short }}</a></h4></li>
+		<li><h4><a href="#">{{ site.data.content.headline.short }}</a></h4></li>
+		<li><h4><a href="#">{{ site.data.content.headline.short }}</a></h4></li>
+		<li><h4><a href="#">{{ site.data.content.headline.short }}</a></h4></li>
 	</ul>
 </section>
