--- a/_00-templates/01-blog.html
+++ b/_00-templates/01-blog.html
@@ -1,17 +1,17 @@
 <div class="page" id="page">
-	{{> organisms-header }}
+	{{ site.00-organisms | where:"title" : "Header" }}
 	<div role="main">
 		<h1 class="section-title">Our Outdoor Blog</h1>
 		<div class="l-two-col">
 			<div class="l-main">
-				{{> organisms-latest-posts }}
-				{{> molecules-pagination }}
+				{{ site.00-organisms | where:"title" : "Latest Posts" }}
+				{{ site.00-molecules | where:"title" : "Pagination" }}
 			</div><!--end l-main-->
 
 			<div class="l-sidebar">
-				{{> organisms-recent-tweets }}
+				{{ site.00-organisms | where:"title" : "Recent Tweets" }}
 			</div><!--end l-sidebar-->
 		</div><!--end two-col-->
 	</div><!--End role=main-->
-	{{> organisms-footer }}
+	{{ site.00-organisms | where:"title" : "Footer" }}
 </div>
