--- a/_00-molecules/04-forms/00-search.html
+++ b/_00-molecules/04-forms/00-search.html
@@ -1,5 +1,5 @@
 ---
-title: Search form
+title: Search
 ---
 <form action="{{ site.url }}" method="post" class="inline-form search-form">
     <fieldset>
