Add description class

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ layout: default
             {{ pattern.output }}
           {% endhighlight %}
         </div>
-        <p>{{ pattern.description }}</p>
+        <p class="description">{{ pattern.description }}</p>
 
         {{ pattern.output }}
 
